--- a/tutorial_notebooks/[1]_rag_setup_overview.ipynb
+++ b/tutorial_notebooks/[1]_rag_setup_overview.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "8ea23028",
    "metadata": {},
    "outputs": [],
@@ -81,62 +81,34 @@
     "load_dotenv()\n",
     "\n",
     "# Access the environment variables\n",
+    "\n",
+    "# Langsmith (https://docs.smith.langchain.com/)\n",
     "langchain_tracing_v2 = os.getenv('LANGCHAIN_TRACING_V2')\n",
     "langchain_endpoint = os.getenv('LANGCHAIN_ENDPOINT')\n",
     "langchain_api_key = os.getenv('LANGCHAIN_API_KEY')\n",
+    "os.environ['LANGCHAIN_TRACING_V2'] = langchain_tracing_v2\n",
+    "os.environ['LANGCHAIN_ENDPOINT'] = langchain_endpoint\n",
+    "os.environ['LANGCHAIN_API_KEY'] = langchain_api_key\n",
     "\n",
     "## LLM\n",
     "openai_api_key = os.getenv('OPENAI_API_KEY')\n",
+    "os.environ['OPENAI_API_KEY'] = openai_api_key\n",
     "\n",
     "## Pinecone Vector Database\n",
     "pinecone_api_key = os.getenv('PINECONE_API_KEY')\n",
     "pinecone_api_host = os.getenv('PINECONE_API_HOST')\n",
-    "index_name = os.getenv('PINECONE_INDEX_NAME')\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "75a8ab66-8477-429f-bbbe-ba439322d085",
-   "metadata": {},
-   "source": [
-    "`(2) LangSmith`\n",
-    "\n",
-    "https://docs.smith.langchain.com/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "b76f68a8-4745-4377-8057-6090b87377d1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.environ['LANGCHAIN_TRACING_V2'] = langchain_tracing_v2\n",
-    "os.environ['LANGCHAIN_ENDPOINT'] = langchain_endpoint\n",
-    "os.environ['LANGCHAIN_API_KEY'] = langchain_api_key"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f8eb312d-8a07-4df3-8462-72ac526715f7",
-   "metadata": {},
-   "source": [
-    "`(3) API Keys`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "df28175e-24b6-4939-8a3c-5a1f9511f51e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.environ['OPENAI_API_KEY'] = openai_api_key\n",
-    "\n",
-    "#Pinecone keys\n",
+    "index_name = os.getenv('PINECONE_INDEX_NAME')\n",
     "os.environ['PINECONE_API_KEY'] = pinecone_api_key\n",
     "os.environ['PINECONE_API_HOST'] = pinecone_api_host\n",
-    "os.environ['PINECONE_INDEX_NAME'] = index_name"
+    "os.environ['PINECONE_INDEX_NAME'] = index_name\n",
+    "\n",
+    "# os.environ.get('LANGCHAIN_TRACING_V2')\n",
+    "# os.environ.get('LANGCHAIN_ENDPOINT')\n",
+    "# os.environ.get('LANGCHAIN_API_KEY')\n",
+    "# os.environ.get('OPENAI_API_KEY')\n",
+    "# os.environ.get('PINECONE_API_KEY')\n",
+    "# os.environ.get('PINECONE_API_HOST')\n",
+    "# os.environ.get('PINECONE_INDEX_NAME')"
    ]
   },
   {
@@ -148,15 +120,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "950dbf51",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/andreasimonecosta/Documents/Studio/AI/learning/bRAG-langchain/venv/lib/python3.12/site-packages/pinecone/data/index.py:1: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from tqdm.autonotebook import tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://brag2-bdcpbfk.svc.aped-4627-b74a.pinecone.io\n"
+     ]
+    }
+   ],
    "source": [
     "from pinecone import Pinecone\n",
     "\n",
     "pc = Pinecone(api_key=os.environ['PINECONE_API_KEY'])\n",
-    "index = pc.Index(os.environ['PINECONE_INDEX_NAME'])"
+    "index = pc.Index(os.environ['PINECONE_INDEX_NAME'])\n",
+    "\n",
+    "print(os.environ['PINECONE_API_HOST'])"
    ]
   },
   {
@@ -171,17 +161,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "98070313-0c2f-4ba6-ae3e-79e2418ce4df",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "USER_AGENT environment variable not set, consider setting it to identify your requests.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input_variables=['context', 'question'] input_types={} partial_variables={} metadata={'lc_hub_owner': 'rlm', 'lc_hub_repo': 'rag-prompt', 'lc_hub_commit_hash': '50442af133e61576e74536c6556cefe1fac147cad032f4377b60c436e6cdcb6e'} messages=[HumanMessagePromptTemplate(prompt=PromptTemplate(input_variables=['context', 'question'], input_types={}, partial_variables={}, template=\"You are an assistant for question-answering tasks. Use the following pieces of retrieved context to answer the question. If you don't know the answer, just say that you don't know. Use three sentences maximum and keep the answer concise.\\nQuestion: {question} \\nContext: {context} \\nAnswer:\"), additional_kwargs={})]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "'Task decomposition is a technique that breaks down complex tasks into smaller and simpler steps. It can be achieved through prompting methods like Chain of Thought or Tree of Thoughts, which help models decompose tasks into manageable subtasks. Task decomposition can also be done using task-specific instructions or human inputs.'"
+       "'Task decomposition is the process of breaking down a complex task into smaller, more manageable subtasks. It helps in organizing and prioritizing the steps needed to complete a task efficiently. By dividing the task into smaller components, it becomes easier to assign responsibilities and track progress.'"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,6 +231,7 @@
     "\n",
     "# Prompt\n",
     "prompt = hub.pull(\"rlm/rag-prompt\")\n",
+    "print(prompt)\n",
     "\n",
     "# LLM\n",
     "llm = ChatOpenAI(model_name=\"gpt-3.5-turbo\", temperature=0.1)\n",
@@ -242,7 +247,7 @@
     "    | llm\n",
     "    | StrOutputParser()\n",
     ")\n",
-    "\n",
+    "1\n",
     "# Question\n",
     "rag_chain.invoke(\"What is Task Decomposition?\")"
    ]
@@ -264,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "edd7beeb-21fa-4f4b-b8fa-5a4f70489a16",
    "metadata": {},
    "outputs": [],
@@ -284,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "df119cca-1676-4caa-bad4-11805d69e616",
    "metadata": {},
    "outputs": [
@@ -294,7 +299,7 @@
        "8"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "6bd98786-755d-4d49-ba97-30c5a623b74e",
    "metadata": {},
    "outputs": [
@@ -331,7 +336,7 @@
        "3072"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "b8001998-b08c-4560-b124-bfa1fced8958",
    "metadata": {},
    "outputs": [
@@ -362,7 +367,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cosine Similarity: 0.5853914298563532\n"
+      "Cosine Similarity: 0.5854973256694789\n"
      ]
     }
    ],
@@ -404,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "5778c31a-6138-4130-8865-31a08e82b9fb",
    "metadata": {},
    "outputs": [],
@@ -437,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "e668d339-3951-4662-8387-c3d296646906",
    "metadata": {},
    "outputs": [],
@@ -466,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "baa90aaf-cc1b-46a1-9fba-cf20804dcb41",
    "metadata": {},
    "outputs": [],
@@ -476,8 +481,8 @@
     "from langchain_community.vectorstores import Pinecone\n",
     "\n",
     "vectorstore = Pinecone.from_documents(\n",
-    "    documents=splits, \n",
-    "    embedding=OpenAIEmbeddings(model=\"text-embedding-3-large\"), \n",
+    "    documents=splits,\n",
+    "    embedding=OpenAIEmbeddings(model=\"text-embedding-3-large\"),\n",
     "    index_name=index_name\n",
     ")\n",
     "\n",
@@ -494,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "id": "fafdada1-4c4e-41f8-ad1a-33861aae3930",
    "metadata": {},
    "outputs": [],
@@ -514,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "id": "57c2de7a-93e6-4072-bc5b-db6516f96dda",
    "metadata": {},
    "outputs": [],
@@ -524,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "id": "db96f877-60d3-4741-9846-e2903831583d",
    "metadata": {},
    "outputs": [
@@ -534,7 +539,7 @@
        "1"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "8beb6c14-5e18-43e7-9d04-59e3b8a81cc9",
    "metadata": {},
    "outputs": [
@@ -570,7 +575,7 @@
        "ChatPromptTemplate(input_variables=['context', 'question'], input_types={}, partial_variables={}, messages=[HumanMessagePromptTemplate(prompt=PromptTemplate(input_variables=['context', 'question'], input_types={}, partial_variables={}, template='Answer the question based only on the following context:\\n{context}\\n\\nQuestion: {question}\\n'), additional_kwargs={})])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "id": "e4461264-5cac-479a-917c-9bf589826da4",
    "metadata": {},
    "outputs": [],
@@ -603,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "id": "55d6629f-18ec-4372-a557-b254fbb1dd2d",
    "metadata": {},
    "outputs": [],
@@ -614,17 +619,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "id": "94470770-8df4-4359-9504-ef6c8b3137ff",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='Task Decomposition is a technique used by autonomous agents to break down complex tasks into smaller and simpler steps, allowing the agent to plan ahead and effectively complete the overall task. This can be achieved through methods such as Chain of Thought (CoT) or Tree of Thoughts, which involve breaking down tasks into manageable steps and exploring multiple reasoning possibilities at each step. Task decomposition can be done using simple prompting by LLM, task-specific instructions, or with human inputs.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 92, 'prompt_tokens': 331, 'total_tokens': 423, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-d3bbf222-6151-4b1c-ac64-466620f3a3ea-0', usage_metadata={'input_tokens': 331, 'output_tokens': 92, 'total_tokens': 423, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
+       "AIMessage(content='Task Decomposition is a technique used by agents to break down complicated tasks into smaller and simpler steps in order to enhance model performance on complex tasks. This can be achieved through prompting techniques such as Chain of Thought (CoT) or Tree of Thoughts, as well as using task-specific instructions or human inputs.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 61, 'prompt_tokens': 331, 'total_tokens': 392, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-a814496e-6ed3-4bb4-aad1-5651f76572da-0', usage_metadata={'input_tokens': 331, 'output_tokens': 61, 'total_tokens': 392, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "id": "65770e2d-3d5e-4371-abc9-0aeca9646885",
    "metadata": {},
    "outputs": [],
@@ -647,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 22,
    "id": "f53e5840-0a0f-4428-a4a4-6922800aff89",
    "metadata": {},
    "outputs": [
@@ -657,7 +662,7 @@
        "ChatPromptTemplate(input_variables=['context', 'question'], input_types={}, partial_variables={}, metadata={'lc_hub_owner': 'rlm', 'lc_hub_repo': 'rag-prompt', 'lc_hub_commit_hash': '50442af133e61576e74536c6556cefe1fac147cad032f4377b60c436e6cdcb6e'}, messages=[HumanMessagePromptTemplate(prompt=PromptTemplate(input_variables=['context', 'question'], input_types={}, partial_variables={}, template=\"You are an assistant for question-answering tasks. Use the following pieces of retrieved context to answer the question. If you don't know the answer, just say that you don't know. Use three sentences maximum and keep the answer concise.\\nQuestion: {question} \\nContext: {context} \\nAnswer:\"), additional_kwargs={})])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,17 +681,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 23,
    "id": "8208a8bc-c75f-4e8e-8601-680746cd6276",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Task Decomposition is a technique used by agents to break down complex tasks into smaller and simpler steps, allowing for easier planning and execution. It can be achieved through methods such as Chain of Thought and Tree of Thoughts, which prompt the agent to think step by step and explore multiple reasoning possibilities at each step. Task decomposition can be done using simple prompting by LLM, task-specific instructions, or with human inputs.'"
+       "'Task Decomposition is the process of breaking down a complicated task into smaller and simpler steps in order to make it more manageable for an agent to plan and execute. It can be done using techniques like Chain of Thought and Tree of Thoughts, as well as simple prompting or task-specific instructions.'"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,7 +733,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -742,7 +747,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
