--- a/tutorial_notebooks/[3]_rag_routing_and_query_construction.ipynb
+++ b/tutorial_notebooks/[3]_rag_routing_and_query_construction.ipynb
@@ -41,15 +41,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "3bc82800-5498-40be-86db-e1f6df8c86da",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from dotenv import load_dotenv\n",
     "import os\n",
+    "\n",
+    "# Load environment variables from .env file\n",
+    "load_dotenv()\n",
+    "\n",
     "os.environ['LANGCHAIN_TRACING_V2'] = 'true'\n",
     "os.environ['LANGCHAIN_ENDPOINT'] = 'https://api.smith.langchain.com'\n",
-    "os.environ['LANGCHAIN_API_KEY'] = <your-api-key>"
+    "os.environ['LANGCHAIN_API_KEY'] = os.getenv('LANGCHAIN_API_KEY')"
    ]
   },
   {
@@ -62,12 +67,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "78e8ecbd-7ba1-4a2d-8ad5-4ce59e164d23",
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ['OPENAI_API_KEY'] = <your-api-key>"
+    "os.environ['OPENAI_API_KEY'] = os.getenv('OPENAI_API_KEY')"
    ]
   },
   {
@@ -95,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "04c2cf60-d636-4992-a021-1236f7688999",
    "metadata": {},
    "outputs": [],
@@ -103,7 +108,7 @@
     "from typing import Literal\n",
     "\n",
     "from langchain_core.prompts import ChatPromptTemplate\n",
-    "from langchain_core.pydantic_v1 import BaseModel, Field\n",
+    "from pydantic import BaseModel, Field\n",
     "from langchain_openai import ChatOpenAI\n",
     "\n",
     "# Data model\n",
@@ -152,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "cfc6febc-93df-49b4-9920-c93589ba021e",
    "metadata": {},
    "outputs": [],
@@ -170,20 +175,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "277536df-0904-4d99-92bb-652621afbdec",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RouteQuery(datasource='python_docs')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "636a43ae-50f3-43a1-a1b7-93266ea13bcd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'python_docs'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "result.datasource"
    ]
@@ -200,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "id": "01f15722-35c6-4456-ad1b-06463233db25",
    "metadata": {},
    "outputs": [],
@@ -223,10 +250,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "6af07b77-0537-4635-87ec-ad8f59d34e9b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'chain for python_docs'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "full_chain.invoke({\"question\": question})"
    ]
@@ -264,10 +302,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "53cbfa72-c35a-4d1d-aa6d-08a570ab2170",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using PHYSICS\n",
+      "A black hole is a region in space where the gravitational pull is so strong that nothing, not even light, can escape from it. This happens when a massive star collapses in on itself, creating a dense core with an incredibly powerful gravitational force. The boundary around a black hole is called the event horizon, and anything that crosses this boundary is pulled into the black hole. Black holes can vary in size, with some being as small as a single atom and others being millions of times more massive than our sun. While we can't directly see black holes, we can observe their effects on nearby objects and the surrounding space.\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain.utils.math import cosine_similarity\n",
     "from langchain_core.output_parsers import StrOutputParser\n",
@@ -567,7 +614,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -581,7 +628,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
