--- a/tutorial_notebooks/[4]_rag_indexing_and_advanced_retrieval.ipynb
+++ b/tutorial_notebooks/[4]_rag_indexing_and_advanced_retrieval.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6098b8bf-354d-4eea-ba25-25fe12ba6b6b",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
     "import os\n",
     "os.environ['LANGCHAIN_TRACING_V2'] = 'true'\n",
     "os.environ['LANGCHAIN_ENDPOINT'] = 'https://api.smith.langchain.com'\n",
-    "os.environ['LANGCHAIN_API_KEY'] = <your-api-key>"
+    "os.environ['LANGCHAIN_API_KEY'] = os.getenv('LANGCHAIN_API_KEY')"
    ]
   },
   {
@@ -70,12 +70,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d966f427-1a9f-4bc8-b1fa-5df6078b1df6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ['OPENAI_API_KEY'] = <your-api-key>"
+    "os.environ['OPENAI_API_KEY'] = os.getenv('OPENAI_API_KEY')"
    ]
   },
   {
@@ -107,10 +107,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "1bf368e7-ebf6-4469-bfa7-62466184afbb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "USER_AGENT environment variable not set, consider setting it to identify your requests.\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_community.document_loaders import WebBaseLoader\n",
     "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
@@ -124,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "431c9506-c6c0-463b-af77-9291a63f1d26",
    "metadata": {},
    "outputs": [],
@@ -148,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "dc5614c1-121c-4ad5-8609-cc0e4a633ee9",
    "metadata": {},
    "outputs": [],
@@ -187,10 +195,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "f111ca83-3e56-4785-bac3-99948cd8df1b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Document(metadata={'doc_id': 'bfdac0c3-a852-4553-8aaa-581f4dca30b3'}, page_content='The document discusses the concept of building autonomous agents powered by LLM (large language model) as the core controller. It covers key components of these agents, including planning, memory, and tool use, along with case studies and proof-of-concept examples. Challenges such as finite context length, reliability of natural language interface, and long-term planning are also highlighted. Citation and references for further reading are provided at the end of the document.')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "query = \"Memory in agents\"\n",
     "sub_docs = vectorstore.similarity_search(query,k=1)\n",
@@ -199,10 +218,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "729074f9-8bde-4c76-a7da-4cc0e50ed52d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/nc/8tc4fnhx1rl_mw0gwrx5bqq40000gn/T/ipykernel_42734/3791815623.py:1: LangChainDeprecationWarning: The method `BaseRetriever.get_relevant_documents` was deprecated in langchain-core 0.1.46 and will be removed in 1.0. Use :meth:`~invoke` instead.\n",
+      "  retrieved_docs = retriever.get_relevant_documents(query,n_results=1)\n",
+      "Number of requested results 4 is greater than number of elements in index 2, updating n_results = 2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"\\n\\n\\n\\n\\n\\nLLM Powered Autonomous Agents | Lil'Log\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nLil'Log\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nPosts\\n\\n\\n\\n\\nArchive\\n\\n\\n\\n\\nSearch\\n\\n\\n\\n\\nTags\\n\\n\\n\\n\\nFAQ\\n\\n\\n\\n\\nemojisearch.app\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n      LLM Powered Autonomous Agents\\n    \\nDate: June 23, 2023  |  Estimated Reading Time: 31 min  |  Author: Lilian Weng\\n\\n\\n \\n\\n\\nTable of Contents\\n\\n\\n\\nAgent System Overview\\n\\nComponent One: Planning\\n\\nTask Decomposition\\n\\nSelf-Reflection\\n\\n\\nComponent Two: Memory\\n\\nTypes of Memory\\n\\nMaximum Inner Product Search (MIPS)\\n\\n\""
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "retrieved_docs = retriever.get_relevant_documents(query,n_results=1)\n",
     "retrieved_docs[0].page_content[0:500]"
@@ -365,7 +404,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -379,7 +418,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
