--- a/tutorial_notebooks/[5]_rag_retrieval_and_reranking.ipynb
+++ b/tutorial_notebooks/[5]_rag_retrieval_and_reranking.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a66c5fd1-8da9-416f-b854-1b70d207d606",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
     "import os\n",
     "os.environ['LANGCHAIN_TRACING_V2'] = 'true'\n",
     "os.environ['LANGCHAIN_ENDPOINT'] = 'https://api.smith.langchain.com'\n",
-    "os.environ['LANGCHAIN_API_KEY'] = <your-api-key>"
+    "os.environ['LANGCHAIN_API_KEY'] = os.getenv('LANGCHAIN_API_KEY')"
    ]
   },
   {
@@ -73,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ['OPENAI_API_KEY'] = <your-api-key>\n",
+    "os.environ['OPENAI_API_KEY'] = os.getenv('OPENAI_API_KEY')\n",
     "os.environ['COHERE_API_KEY'] = <your-api-key>"
    ]
   },
@@ -96,10 +96,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "f201eec1-6ed0-4236-9594-286894574779",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "USER_AGENT environment variable not set, consider setting it to identify your requests.\n"
+     ]
+    }
+   ],
    "source": [
     "#### INDEXING ####\n",
     "\n",
@@ -139,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "b733a230-d217-4ee0-8482-ab4380e7be4f",
    "metadata": {},
    "outputs": [],
@@ -155,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "6e37bc5d-93fc-4b34-8a4d-208394e89709",
    "metadata": {},
    "outputs": [],
@@ -173,10 +181,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "728fedac-7f1d-49aa-9d02-47243c0f2bb4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/nc/8tc4fnhx1rl_mw0gwrx5bqq40000gn/T/ipykernel_14444/788335263.py:26: LangChainBetaWarning: The function `loads` is in beta. It is actively being worked on, so the API may change.\n",
+      "  (loads(doc), score)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from langchain.load import dumps, loads\n",
     "\n",
@@ -218,10 +245,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "ee43bb94-613d-46a3-b688-02c2d2aadfba",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Task decomposition for LLM agents involves breaking down large tasks into smaller, manageable subgoals. This process enables the agent to efficiently handle complex tasks by dividing them into smaller and simpler steps. Task decomposition can be achieved through techniques like Chain of Thought (CoT) and Tree of Thoughts, which help the model decompose hard tasks into smaller and simpler steps, making them more manageable. Additionally, task decomposition can be done through simple prompting, task-specific instructions, or with human inputs.'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from operator import itemgetter\n",
     "from langchain_core.runnables import RunnablePassthrough\n",
@@ -353,7 +391,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -367,7 +405,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
